[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/views/EventView.gd" id="1"]

[node name="EventView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Label" parent="./VBox"]
layout_mode = 2
text = "Evento Semanal"

[node name="EnergyConfigLabel" type="Label" parent="./VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Energia"

[node name="ActivitiesLabel" type="Label" parent="./VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Actividades"

[node name="MissionsLabel" type="Label" parent="./VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Misiones"

[node name="StoreLabel" type="Label" parent="./VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Tienda"
